# backend/modules/sensor/sensor.dto.ts
@@ -1,0 +1,6 @@
+export interface Sensor {
+  id: String
+  name: String
+  description: String
+  location: String
+}
